2013-07-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #50034: Re-introduce tx_staticinfotables_div::getTitleFromIsoCode as deprecated method
	* Resolves #50036: Clarify message from ext_update script
	* Resolves #49878: clearCachePostProc should clear proxy classes only when cacheCmd=all
	* Resolves #50050: Use TYPO3 caching framework for extended domain model classes
	* Resolves #49590: Montenegrin language is missing in the static_info_tables

2013-07-02  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #49397: No method name 'selectItemsTCA' in class tx_staticinfotables_div
	* Follow-up to #49397: Correction to the manual
	* Cleanup unescaped backslashes
	* Correction to the manual

2013-06-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #49462: Class tx_staticinfotables_pi1 not always available
	* Resolves #49463: Make extension version available to other extensions

2013-06-17  Stanislas Rolland  <typo3@sjbr.ca>

	* Update version to 6.0.4

2013-06-14  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #49124: Automated PHP Syntax check on LanguagePackTemplates fails
	* Resolves #49142: Add a method to Language Repository

2013-06-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to #48814: Records labels missing in list view using PHP 5.4 (Thanks to Visay Keo)

2013-06-04  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #48814: Records labels missing in list view using PHP 5.4 (Thanks to Visay Keo)

2013-05-31  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #48659: Superfluous closing ">" in pi1/class.tx_staticinfotables_pi1.php
	* Update version to 6.0.3

2013-05-25  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #48524: Missing file Classes/Domain/Model/LanguageExtensible.php
	* Resolves #48528: Error in update script on TYPO3 6.1.1
	* Update version to 6.0.1

2013-05-23  Stanislas Rolland  <typo3@sjbr.ca>

	* Fix extended domain model classes loading after class loader cache is cleared
	* Improve class cache handling
	* Relax extension conflicts